5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1594_1803.log
== TEST (2019-06-25 22:48:18) 
-- CODE:
=1538//1000

-- ERROR:
File "XXXX", line 1
    =1538//1000
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:48:26) 
-- CODE:
a=1538//1000

-- ERROR:
File "XXXX", line 1
    =1538//1000
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:48:39) 
-- CODE:
a=1538//1000
print(a)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:48:51) 
-- CODE:
a=1538//100
print(a)
-- OUTPUT:
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:49:32) 
-- CODE:
a=1538/100
print(a)
-- OUTPUT:
15.38
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:49:52) 
-- CODE:
a=1538%10
print(a)
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 22:50:03) 
-- CODE:
a=1538%100
print(a)
-- OUTPUT:
38
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
